--- a/package.json
+++ b/package.json
@@ -8,7 +8,6 @@
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.21.1",
     "d3": "^6.7.0",
-    "gh-pages": "^3.1.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
@@ -40,5 +39,8 @@
       "last 1 safari version"
     ]
   },
-  "homepage": "https://github.com/jgajera/React-WorldBank-API-UI.git"
+  "homepage": "https://github.com/jgajera/React-WorldBank-API-UI",
+  "devDependencies": {
+    "gh-pages": "^3.1.0"
+  }
 }
