--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
       "last 1 safari version"
     ]
   },
-  "homepage": "https://github.com/jgajera/React-WorldBank-API-UI",
+  "homepage": "https://jgajera.github.io/React-WorldBank-API-UI/",
   "devDependencies": {
     "gh-pages": "^3.1.0"
   }
